# wagtail-favicon

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
wagtail_favicon/: __init__.py  apps.py  models.py  urls.py  utils.py  validators.py  views.py
wagtail_favicon/migrations/: 0001_initial.py  0002_auto_20210128_1941.py  0002_remove_social_sharing_image_setting.py
wagtail_favicon/templates/: browser-config.xml
wagtail_favicon/templates/tags/: favicon_meta.html
wagtail_favicon/templatetags/: favicon_tags.py
