[tool.poetry]
name = "wagtail-favicon"
version = "0.1.9"
description = "Easily add shortcut icons to any wagtail site."
authors = ["Pat Horsley <pat@octave.nz>"]
readme = 'README.md'
homepage = 'https://github.com/octavenz/wagtail-favicon'
license = "BSD"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
